# QtAnalyzeGPX

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  DeployWin.bat  LICENSE.md  README.md  TODO.rtf  TODO.txt
.github/workflows/: codeql.yml
GarminGpxLib/: CMakeLists.txt  garmingpxfile.cpp  garmingpxfile.h
Models/: CMakeLists.txt  garmintreemodel.cpp  garmintreemodel.h  garmintreenode.cpp  garmintreenode.h  gpxtablemodel.cpp  gpxtablemodel.h
Resources/: 01_License_BSD-4.txt  win.rc
Resources/Icons/: AppIcon.icns
UI/Controllers/: CMakeLists.txt  actions.cpp  actions.h
UI/Widgets/: AnalyzeGPX_Widgets.h.in  CMakeLists.txt  controller.cpp  controller.h  gpxtablemodel.cpp  gpxtablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Utils/: CMakeLists.txt  CMakeLists.txt.bak  licenses.cpp  licenses.h  resoucehandling.cpp  resoucehandling.h
apps/QML/: CMakeLists.txt  DevicesTreeView.qml  ListHeader.qml  MainView.qml  MainViewForm.ui.qml  RteTrkWptListView.qml  main.cpp  main.qml  qml.qrc
apps/QML/controllers/: controller.cpp  controller.h
apps/Widgets/: CMakeLists - Apple.txt  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/Widgets/controllers/: controller.cpp  controller.h  garmintreemodel.cpp  garmintreemodel.h
apps/Widgets/vm/: controller.cpp  controller.h  garmintreemodel.cpp  garmintreemodel.h  gpxtablemodel.cpp  gpxtablemodel.h
libs/: CMakeLists.txt  garmingpxfile.cpp
libs/garmin/: CMakeLists.txt  garminfiles.cpp  garminfiles.h  garminfitfile.cpp  garminfitfile.h  garmingpxfile.cpp  garmingpxfile.h
libs/volumeInfo/: CMakeLists.txt  volumeinfo.cpp  volumeinfo.h
resources/: CMakeLists.txt
